--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^5.3.1",
     "firebase": "^7.23.0",
+    "isotope-layout": "^3.0.6",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.8.0",
     "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-hooks-lib": "^0.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "semver": "^7.5.4",
-    "source-map": "^0.7.4"
+    "source-map": "^0.7.4",
+    "web-vitals": "^3.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
